Fixed Stretched Video Thumbnails

--- a/Material-You Turntable/style.css
+++ b/Material-You Turntable/style.css
@@ -51,6 +51,9 @@ body {
 }
 
 #imgArtwork {
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
     z-index: 1;
 }
 
